--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html lang='en'>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> SinS </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> SinS </title>
 </head>
 <body>
   <h1> Statistics in Sciences </h1>
